services.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-service
  namespace: microservices
spec:
  selector:
    app: middleware-middleware
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-middleware-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middleware-middleware
  template:
    metadata:
      labels:
        app: middleware-middleware
    spec:
      containers:
        - name: middleware-middleware
          image: dannyfuf/middleware
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: receiver-service
  namespace: microservices
spec:
  selector:
    app: middleware-receiver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-receiver-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middleware-receiver
  template:
    metadata:
      labels:
        app: middleware-receiver
    spec:
      containers:
        - name: middleware-receiver
          image: dannyfuf/receiver
          command: ["python3", "events/events.py"]
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: microservices
spec:
  selector:
    app: middleware-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-gateway-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middleware-gateway
  template:
    metadata:
      labels:
        app: middleware-gateway
    spec:
      containers:
        - name: middleware-gateway
          image: dannyfuf/gateway
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: microservices
spec:
  selector:
    app: middleware-chat
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 5173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-chat-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middleware-chat
  template:
    metadata:
      labels:
        app: middleware-chat
    spec:
      containers:
        - name: middleware-chat
          image: dannyfuf/chat
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: microservices
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-rabbitmq-deployment
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: microservices
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-redis-deployment
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
